# MacroHardGameEngine

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/: Display.h  IDisplay.h  IDisplaySystem.h  ISystem.h  ISystemLifeCycle.h
libs/: CMakeLists.txt
libs/MicroHardGameEngine/: CMakeLists.txt
libs/MicroHardGameEngine/include/: test.h
libs/MicroHardGameEngine/src/: main.cpp
src/: SystemLifeCycle.cpp  SystemLifeCycle.h  main.cpp
src/Win32/: DisplaySystem.cpp  DisplaySystem.h  OpenGLDisplayWin32.cpp  OpenGLDisplayWin32.h  Win32Display.cpp  Win32Display.h  Win32System.cpp  Win32System.h
src/Win32/GL/: gl.c  wgl.c  wglext.h
src/Win32/GL/glad/: gl.h  wgl.h
